Started installing terminal access

--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     },
     "devDependencies": {
         "axios": "^0.21",
+        "fs": "^0.0.1-security",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "socket.io": "^4.1.1",
+        "xterm": "^4.12.0"
     }
 }
