--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "socket.io": "^4.1.1",
-        "xterm": "^4.12.0"
+        "resolve-url-loader": "^3.1.3",
+        "sass": "^1.32.13",
+        "sass-loader": "^11.1.1",
+        "socket.io": "^4.1.1"
     }
 }
