Added API and angular components for adding/updating groups

--- a/resources/ng/tsconfig.json
+++ b/resources/ng/tsconfig.json
@@ -3,6 +3,14 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@interfaces/*": [
+        "src/app/interfaces/*"
+      ],
+      "@pages/*": [
+        "src/app/pages/*"
+      ]
+    },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
